@@ -19,8 +19,6 @@
 files_codegen_m4 =		\
 	class_gtkobject.m4		\
 	convert.m4		\
-	convert_atk.m4		\
 	convert_gdk.m4		\
 	convert_gtk.m4		\
-	convert_gtkmm.m4	\
-	convert_pango.m4
+	convert_gtkmm.m4
