@@ -1,5 +1,13 @@
 2011-01-14 Murray Cumming <murrayc@murrayc.com>
 
+  Use the m4 convert files from atkmm and pangomm instead of repeating them.
+
+  * configure.ac: Discover the path of the pangomm and atkmm m4 files for use
+  instead of repeating them here.
+  * tools/m4: Remove convert_pango.m4 and convert_atk.m4.
+
+2011-01-14 Murray Cumming <murrayc@murrayc.com>
+
   Depend on necessary versions of atkmm and pangomm.
 
   * configure.ac: Depend on the versions of atkmm and pangomm that provide
